# spi

./: .gitignore  README.md
rtl/: spi.v
sim/: CMakeLists.txt  sim.cpp  spislave.cpp  spislave.h
